--- a/index.html
+++ b/index.html
@@ -208,12 +208,20 @@
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="research">
             <div class="my-auto">
                 <h2 class="mb-5">Research</h2>
+
                 <p class="mb-5 text-primary">
                     I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning vision neuroscience, mathematical biology, artificial intelligence, reinforcement learning, genome sciences, protein design, computational psychiatry, and human-computer interaction. I also maintain close industrial collaborations with IBM Research and Microsoft Research. 
                 </p>
                 <p class="mb-5 text-primary">
                     Research by areas: <span style="color: blue;"> neuroscience (NS)</span>, <span style="color: red;">machine learning (ML)</span>, <span style="color: chocolate;"> computer vision (CV)</span>, <span style="color: purple;"> geometric topology (GT)</span>, <span style="color: forestgreen;"> systems biology (SB)</span>, <span style="color: teal;"> applied mathematics (AM)</span>, <span style="color: brown;"> human-computer interaction (HCI)</span>, <span style="color: orange;"> Bayesian statistics (BS)</span>, <span style="color: salmon;"> translational medicine (TM) </span>.
                 </p>
+                
+                <!-- <p class="mb-5 text-primary">
+                    I am very grateful to have mentors and collaborators with whom I have the honor to work on various interesting problems spanning vision neuroscience, mathematical biology, artificial intelligence, reinforcement learning, genome sciences, protein design, computational psychiatry, and human-computer interaction. I also maintain close industrial collaborations with IBM Research and Microsoft Research. 
+                </p>
+                <p class="mb-5 text-primary">
+                    Research by areas: <span style="color: blue;"> neuroscience (NS)</span>, <span style="color: red;">machine learning (ML)</span>, <span style="color: chocolate;"> computer vision (CV)</span>, <span style="color: purple;"> geometric topology (GT)</span>, <span style="color: forestgreen;"> systems biology (SB)</span>, <span style="color: teal;"> applied mathematics (AM)</span>, <span style="color: brown;"> human-computer interaction (HCI)</span>, <span style="color: orange;"> Bayesian statistics (BS)</span>, <span style="color: salmon;"> translational medicine (TM) </span>.
+                </p> -->
                 <p class="mb-5 text-primary">
                 <table align="left" class="mb-5 text-primary">
                     <tr bgcolor="lightgrey">
@@ -339,7 +347,7 @@
         [20]&nbsp;<b class="text-primary" id="p18"> Unsupervised Attention Mechanism across Neural Network Layers &nbsp; </b>
         <br />
         <b><span style="color: dimgray;">Baihan Lin</span></b>
-        <br />
+        <br /><br/>
         <p style="color:black"> under review </p>
         [
         arXiv to come
@@ -361,9 +369,9 @@
         <img src="./img/publications/gonzalez2019enhance.png" alt="gonzalez2019enhance" border="1" style="width:100%">
         </div>
         <div class="textcolumn">
-        [19]&nbsp; <b class="text-primary" id="p19"> Enhanced arm reach after a Pinocchio illusion in Virtual Reality &nbsp; </b>
-        <br /> Mar Gonzalez-Franco, Christopher Berger, <b><span style="color: dimgray;">Baihan Lin</span></b>, and Jaron Lanier
-        <br />
+        [19]&nbsp; <b class="text-primary" id="p19"> Elongated arm reach after a Pinocchio illusion in Virtual Reality &nbsp; </b>
+        <br /> Mar Gonzalez-Franco, Christopher Berger, <b><span style="color: dimgray;">Baihan Lin</span></b>, Bigna Lenggenhager, and Jaron Lanier
+        <br /><br/>
         <p style="color:black"> manuscript in preparation </p>
         [
         <a class="collapsible" style="color:#3498db">abstract&nbsp;</a>
@@ -388,7 +396,7 @@
         [18]&nbsp;<b class="text-primary" id="p18"> A Story of Two Streams: Reinforcement Learning Models from Human Behavior and Neuropsychiatry &nbsp; </b>
         <br />
         <b><span style="color: dimgray;">Baihan Lin</span></b>, Guillermo Cecchi, Djallel Bouneffouf, Jenna Reinen, Irina Rish
-        <br />
+        <br /><br/>
         <p style="color:black"> NIPS 2019 Workshop on Biological & Artificial RL (BARL) </p>
         [
         <a href="https://arxiv.org/abs/1906.11286" style="color:#3498db">arXiv</a>
@@ -417,12 +425,14 @@
         [17]&nbsp;<b class="text-primary" id="p17"> What About Higher-Order Cellular Complexity? An Inquiry with Topological Simplicial Analysis &nbsp; </b>
         <br />
         <b><span style="color: dimgray;">Baihan Lin</span></b>, Raul Rabadan, Nikolaus Kriegeskorte
-        <br />
+        <br /><br/>
         <p style="color:black"> NIPS 2019 Workshop on Learning Meaningful Representations of Life (LMRL) </p>
         <!-- [<a href="" style="color:#3498db">arXiv</a>]&nbsp; -->
         <!-- [<a href="./bibTex/lin2019reinforce.txt" style="color:#3498db">bibTex</a>]&nbsp; -->
         [
         arXiv to come
+        ]&nbsp; [
+        <a href="./pdfs/NIPS_scTSA_poster.pdf" style="color:#3498db">poster</a>
         ]&nbsp; [
         <a href="./bibTex/lin2019what.txt" style="color:#3498db">bibTex</a>
         ]&nbsp; [
@@ -445,7 +455,7 @@
         <div class="textcolumn">
         [16]&nbsp;<b class="text-primary" id="p16"> Influence of Ocular Dominance Columns and Patchy Callosal Connections on Binocularity in Lateral Striate Cortex: Long Evans vs. Albino Rats &nbsp; </b>
         <br /> Adrian Andelin, Zane Doyle, Robyn Laing, Joseph Turecek, <b><span style="color: dimgray;">Baihan Lin</span></b>, and Jaime Olavarria
-        <br />
+        <br /><br/>
         <p style="color:black"> Journal of Comparative Neurology </p>
         [
         <a href="./pdfs/andelin2019lack.pdf" style="color:#3498db">pdf</a>
@@ -472,7 +482,7 @@
         [15] &nbsp; <b class="text-primary" id="p15"> Modeling Neurological and Psychiatric Disorders with Reward Biased Reinforcement Learning Models &nbsp; </b>
         <br />
         <b><span style="color: dimgray;">Baihan Lin</span></b>.
-        <br />
+        <br /><br/>
         <p style="color:black"> TIPS 2019 </p>
         [
         <a href="https://www.mcleanhospital.org/technology-psychiatry-summit" style="color:#3498db">link</a>
@@ -499,7 +509,7 @@
         [14]&nbsp; <b class="text-primary" id="p14"> Visualizing Representational Dynamics with Multidimensional Scaling Alignment &nbsp; </b>
         <br />
         <b><span style="color: dimgray;">Baihan Lin</span></b>, Marieke Mur, Tim Kietzmann, Nikolaus Kriegeskorte
-        <br />
+        <br /><br/>
         <p style="color:black"> CCN 2019 </p>
         [
         <a href="https://arxiv.org/abs/1906.09264" style="color:#3498db">arXiv</a>
@@ -528,7 +538,7 @@
         [13]&nbsp; <b class="text-primary" id="p13"> Cliques of single-cell RNA-seq profiles reveal insights into cell ecology during development and differentiation &nbsp; </b>
         <br />
         <b><span style="color: dimgray;">Baihan Lin</span></b>
-        <br />
+        <br /><br/>
         <p style="color:black"> ISMB 2019 </p>
         [
         <a href="./pdfs/ISMB_scTSA_slides.pdf" style="color:#3498db">slides</a>
@@ -558,7 +568,7 @@
         <div class="textcolumn">
         [12]&nbsp; <b class="text-primary" id="p12"> Self-assembling 2d arrays with de novo protein building blocks &nbsp; </b>
         <br /> Zibo Chen, Matthew Johnson, Jiajun Chen, Matthew Bick, Scott Boyken, <b><span style="color: dimgray;">Baihan Lin</span></b>, James DeYoreo, Justin Kollman, David Baker, and Frank DiMaio
-        <br />
+        <br /><br/>
         <p style="color:black"> Journal of the American Chemical Society </p>
         [
         <a href="./pdfs/chen2019self.pdf" style="color:#3498db">pdf</a>
@@ -587,7 +597,7 @@
         [11]&nbsp; <b class="text-primary" id="p11"> Split Q Learning: Reinforcement Learning with Two-Stream Rewards &nbsp; </b>
         <br />
         <b><span style="color: dimgray;">Baihan Lin</span></b>, Djallel Bouneffouf, Guillermo Cecchi
-        <br />
+        <br /><br/>
         <p style="color:black"> IJCAI 2019 </p>
         [
         <a href="https://arxiv.org/abs/1906.12350" style="color:#3498db">arXiv</a>
@@ -618,7 +628,7 @@
         [10]&nbsp; <b class="text-primary" id="p10"> Neural Networks as Model Selection with Incremental MDL Normalization &nbsp; </b>
         <br />
         <b><span style="color: dimgray;">Baihan Lin</span></b>
-        <br />
+        <br /><br/>
         <p style="color:black"> IJCAI 2019 Workshop on Human Brain and Artificial Intelligence (HBAI) </p>
         [
         <a href="https://arxiv.org/abs/1902.10658" style="color:#3498db">arXiv</a>
@@ -655,7 +665,7 @@
         [9]&nbsp; <b class="text-primary" id="p9"> Adaptive Independence Tests with Geo-Topological Transformation &nbsp; </b>
         <br />
         <b><span style="color: dimgray;">Baihan Lin</span></b>, Nikolaus Kriegeskorte
-        <br />
+        <br /><br/>
         <p style="color:black"> arXiv </p>
         [
         <a href="https://arxiv.org/abs/1810.02923" style="color:#3498db">arXiv</a>
@@ -684,7 +694,7 @@
         [8]&nbsp; <b class="text-primary" id="p8"> Adaptive Representation Selection in Contextual Bandit &nbsp; </b>
         <br />
         <b><span style="color: dimgray;">Baihan Lin</span></b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish
-        <br />
+        <br /><br/>
         <p style="color:black"> arXiv </p>
         [
         <a href="https://arxiv.org/abs/1802.00981" style="color:#3498db">arXiv</a>
@@ -713,7 +723,7 @@
         [7]&nbsp; <b class="text-primary" id="p7"> Contextual Bandit with Adaptive Feature Extraction &nbsp; </b>
         <br />
         <b><span style="color: dimgray;">Baihan Lin</span></b>, Guillermo Cecchi, Djallel Bouneffouf, Irina Rish
-        <br />
+        <br /><br/>
         <p style="color:black"> IEEE ICDM 2018 Workshop on Data Science and Big Data Analytics (DSBDA) </p>
         [
         <a href="./pdfs/lin2018contextual.pdf" style="color:#3498db">pdf</a>
@@ -745,7 +755,7 @@
         <div class="textcolumn">
         [6] &nbsp; <b class="text-primary" id="p6"> Parkinson’s disease digital biomarker discovery with optimized transitions and inferred markov emissions &nbsp; </b>
         <br /> Avinash Bukkittu, <b><span style="color: dimgray;">Baihan Lin</span></b>, Trung Vu, and Itsik Pe’er
-        <br />
+        <br /><br/>
         <p style="color:black"> RECOMB/ISCB 2017 Conference on Regulatory & Systems Genomics </p>
         [
         <a href="https://arxiv.org/abs/1711.04078" style="color:#3498db">arXiv</a>
@@ -773,7 +783,7 @@
         <div class="textcolumn">
         [5] &nbsp; <b class="text-primary" id="p5"> Dynamic Forecasting of Zika Epidemics Using Google Trends &nbsp; </b>
         <br /> Yue Teng, Dehua Bi, Guigang Xie, Yuan Jin, Yong Huang, <b><span style="color: dimgray;">Baihan Lin</span></b>, Xiaoping An, Dan Feng, and Yigang Tong
-        <br />
+        <br /><br/>
         <p style="color:black"> PLoS One </p>
         [
         <a href="./pdfs/teng2017dynamic.pdf" style="color:#3498db">pdf</a>
@@ -799,7 +809,7 @@
         <div class="textcolumn">
         [4] &nbsp; <b class="text-primary" id="p4"> Model-informed risk assessment for Zika virus outbreaks in the Asia-Pacific regions &nbsp; </b>
         <br /> Yue Teng, Dehua Bi, Guigang Xie, Yuan Jin, Yong Huang, <b><span style="color: dimgray;">Baihan Lin</span></b>, Xiaoping An, Yigang Tong, and Dan Feng
-        <br />
+        <br /><br/>
         <p style="color:black"> Journal of Infection </p>
         [
         <a href="./pdfs/teng2017model.pdf" style="color:#3498db">pdf</a>
@@ -823,7 +833,7 @@
         <div class="textcolumn">
         [3] &nbsp; <b class="text-primary" id="p3"> An Integrative Analysis Reveals a Central Role of P53 Activation via MDM2 in Zika Virus Infection Induced Cell Death &nbsp; </b>
         <br /> Yue Teng, Shufeng Liu, Xiaocan Guo, Shuxia Liu, Yuan Jin, Tongtong He, Dehua Bi, Pei Zhang, <b><span style="color: dimgray;">Baihan Lin</span></b>, Xiaoping An, Dan Feng, Zhiqiang Mi and Yigang Tong
-        <br />
+        <br /><br/>
         <p style="color:black"> Frontiers in cellular and infection microbiology </p>
         [
         <a href="./pdfs/teng2017integrative.pdf" style="color:#3498db">pdf</a>
@@ -852,7 +862,7 @@
         [2] &nbsp; <b class="text-primary" id="p2"> Ocular Dominance Columns in Rat Visual Cortex: a Quantitative Model to Analyze Deprivation-Induced Cortical Plasticity &nbsp; </b>
         <br />
         <b><span style="color: dimgray;">Baihan Lin</span></b>, Adrian K Andelin, Jaime F Olavarria
-        <br />
+        <br /><br/>
         <p style="color:black"> NeuroFutures Conference 2016 </p>
         [
         <a href="./pdfs/NeuroFutures_ODC.pdf" style="color:#3498db">pdf</a>
@@ -884,7 +894,7 @@
         <div class="textcolumn">
         [1] &nbsp; <b class="text-primary" id="p1"> Systematic Genome-wide Screening and Prediction of microRNAs in EBOV During the 2014 Ebolavirus Outbreak &nbsp; </b>
         <br /> Yue Teng, Yuzhuo Wang, Xianglilan Zhang, Wenli Liu, Hang Fan, Hongwu Yao, <b><span style="color: dimgray;">Baihan Lin</span></b>, Ping Zhu, Wenjun Yuan, Yigang Tong and Wuchun Cao
-        <br />
+        <br /><br/>
         <p style="color:black"> Scientific Reports </p>
         [
         <a href="./pdfs/teng2015systematic.pdf" style="color:#3498db">pdf</a>
